# document-agent

./: .gitignore  前端组件节点协议设计 (Node Schema).md  方案生成智能体系统设计文档 v2.md  方案生成智能体系统设计文档 v3.md  方案生成智能体（Agent）系统设计文档.md
.claude/: .fuse_hidden0000001e00000001  .fuse_hidden0000004c00000002
backend/: .env  .gitignore  pyproject.toml  readme.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: generate.py  knowledge.py  router.py  tools.py  workflows.py
backend/app/db/: models.py  seed.py
backend/app/engine/: __init__.py  builder.py  executors.py  sse.py  state.py  tools.py  vfs.py
backend/app/engine/workflow/: __init__.py  debug_log.py  edge_processor.py  enums.py  event_handler.py  events.py  graph.py  graph_engine.py  node_base.py  node_factory.py  runtime_state.py  skip_propagator.py  sse.py  state_manager.py  variable_pool.py
backend/app/engine/workflow/nodes/: __init__.py  agent_node.py  tool_node.py
backend/app/schemas/: __init__.py  tool.py  workflow.py
backend/data/: document_agent.db
backend/document_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: new.json  nodedb.json  test_workflow_engine.py  ws16.json
fontend/: next.config.ts  package-lock.json  package.json  readme.txt
fontend/src/app/: layout.tsx  page.tsx
fontend/src/app/generate/: page.tsx
fontend/src/components/editor/: TiptapEditor.tsx
fontend/src/components/flow/: AgentNode.tsx  ComponentPalette.tsx  DebugPanel.tsx  FlowCanvas.tsx  PropertyPanel.tsx  TerminalNode.tsx  (+1 more)
fontend/src/lib/: api.ts  flow-control.ts  types.ts
(+4 files in other folders)
